# VINYLwerk

./: .gitignore  CMakeLists.txt  MIGRATION_TO_VINYLWERK_REAPER.md  README.md  analyze_audio.py  index.xml
.github/workflows/: release.yml
Installation/: install.ps1  install.sh
Scripts/: VINYLwerk.lua
Source/: Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: ClickRemoval.cpp  ClickRemoval.h  Decrackle.cpp  Decrackle.h  FilterBank.cpp  FilterBank.h  NoiseReduction.cpp  NoiseReduction.h  OnnxDenoiser.cpp  OnnxDenoiser.h  SpectralProcessor.cpp  SpectralProcessor.h
Source/Processors/: BatchProcessor.cpp  BatchProcessor.h  TrackDetector.cpp  TrackDetector.h
Source/Utils/: AudioFileManager.cpp  AudioFileManager.h  AudioUndoManager.h  LameMP3AudioFormat.cpp  LameMP3AudioFormat.h  SettingsManager.cpp  SettingsManager.h
